modif + new file

--- a/EDA-Data-Crunching.ipynb
+++ b/EDA-Data-Crunching.ipynb
@@ -5,7 +5,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TEST CRUNCHING DATA"
+    "# <center> EDA-DATA-CRUNCHING "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Ce projet concerne l'analyse et l'exploration de données brutes afin de s'assurer de sa bonne qualité  \n",
+    "##### Il exploite des données issus de traffic de bus d'une société de la place d'afin d'analyser son activité et fournir des léviers sur lequels la société pourrait agir pour fructifier son activité."
    ]
   },
   {
@@ -9747,7 +9755,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> ## IV-Mise en place d'un modèle de Machine Learning pour prédire le prix des tichets"
+    "> ## IV-Mise en place d'un modèle de Machine Learning pour prédire le prix des tickets"
    ]
   },
   {
